# PhysicsEngine

./: .gitignore  CMakeLists.txt  README.md  Todo.md
Resources/Shaders/: DefaultFragment.glsl  DefaultVertex.glsl
src/: CollisionSystem.cpp  Main.cpp  PhysicsSystem.cpp  RenderSystem.cpp  Scene.cpp  WindowSystem.cpp  utils.cpp
src/Shapes/: Circle.cpp  Cube.cpp  Rectangle.cpp  Sphere.cpp
src/Systems/: CameraSystem.cpp  CollisionSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp
src/headers/: ActiveCameraData.h  Circle.h  CollisionSystem.h  Cube.h  MeshComponent.h  PhysicsComponent.h  PhysicsSystem.h  Rectangle.h  RenderSystem.h  Scene.h  Shader.h  Sphere.h  TransformComponent.h  Vertex.h  WallCollisionEvent.h  WindowSystem.h
src/headers/Components/: CameraComponent.h  MeshComponent.h  PhysicsComponent.h  RigidBodyComponent.h  TransformComponent.h
src/headers/Components/ColliderComponents/: CircleColliderComponent.h  OBBColliderComponent.h
src/headers/Events/: CollisionEvent.h  OBBCollisionEvent.h
src/headers/Systems/: CameraSystem.h  CollisionSystem.h  PhysicsSystem.h  RenderSystem.h  WindowSystem.h
